add error log  with log4j saved in tomcat logs

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,10 @@
-log4j.rootLogger=INFO,Console,R
+log4j.rootLogger=DEBUG,Console,R
 
 #控制台日志
 log4j.appender.Console=org.apache.log4j.ConsoleAppender  
 log4j.appender.Console.Target=System.out  
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout  
-log4j.appender.Console.layout.ConversionPattern=[%p][%t][%d{yyyy-MM-dd HH\:mm\:ss}][%C] - %m%n  
+log4j.appender.Console.layout.ConversionPattern=[%d{yyyy-MM-dd HH\:mm\:ss}][%C] - %m%n  
 
 #普通文件日志
 log4j.appender.R=org.apache.log4j.RollingFileAppender  
@@ -13,4 +13,4 @@ log4j.appender.R.MaxFileSize=10MB
 #输出日志，如果换成DEBUG表示输出DEBUG以上级别日志
 log4j.appender.R.Threshold=DEBUG  
 log4j.appender.R.layout=org.apache.log4j.PatternLayout  
-log4j.appender.R.layout.ConversionPattern=[%p][%t][%d{yyyy-MM-dd HH\:mm\:ss}][%C] - %m%n
+log4j.appender.R.layout.ConversionPattern=[%d{yyyy-MM-dd HH\:mm\:ss}][%C] - %m%n
